Fixed horizontal scroll on the small display

--- a/src/components/InnerPage/InnerPage.css
+++ b/src/components/InnerPage/InnerPage.css
@@ -9,6 +9,7 @@
 }
 
 .inner-page {
+    box-sizing: border-box;
     width: 100%;
     max-width: var(--max-content-width);
     margin: auto;
